<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="0dp"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/textView_scissor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/scissor_0"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/textView_rock"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_rock"
        android:layout_width="82dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/rock_0"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout_Board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@android:drawable/alert_dark_frame"
        android:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_scissor">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imageButton_00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/top_left"
                android:maxHeight="0dp"
                android:padding="0dp"
                app:srcCompat="@drawable/blank" />

            <ImageButton
                android:id="@+id/imageButton_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/top_middle"
                android:padding="0dp"
                app:srcCompat="@drawable/blank" />

            <ImageButton
                android:id="@+id/imageButton_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/top_right"
                android:padding="0dp"
                app:srcCompat="@drawable/blank" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imageButton_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="10dp"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/middle_left"
                android:padding="0dp"
                app:srcCompat="@drawable/blank" />

            <ImageButton
                android:id="@+id/imageButton_11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/middle_middle"
                android:padding="0dp"
                app:srcCompat="@drawable/blank" />

            <ImageButton
                android:id="@+id/imageButton_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="0dp"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/middle_right"
                android:padding="0dp"
                app:srcCompat="@drawable/blank" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imageButton_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="0dp"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/bottom_left"
                android:padding="0dp"
                app:srcCompat="@drawable/blank" />

            <ImageButton
                android:id="@+id/imageButton_21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/bottom_middle"
                android:padding="0dp"
                app:srcCompat="@drawable/blank" />

            <ImageButton
                android:id="@+id/imageButton_22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/bottom_right"
                android:padding="0dp"
                app:srcCompat="@drawable/blank" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout_Board" />

    <Button
        android:id="@+id/button_newgame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="100dp"
        android:text="New Game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_message" />

    <Button
        android:id="@+id/button_mainmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="100dp"
        android:text="Main Menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_message" />
</androidx.constraintlayout.widget.ConstraintLayout>